package src;

public class Main {
    public static void main(String[] args) {
        // Create an instance of TouristApp and run it
        TouristApp app = new TouristApp();
        app.run();
    }
}
